Fix original author name

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "BSD-2-Clause",
     "authors": [
         {
-            "name": "passwd",
+            "name": "maknz",
             "email": "github@mak.geek.nz"
         },
       {
